Translate sign-up form text to Arabic

--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
             } else {
                 signInForm.classList.remove('active');
                 signUpForm.classList.add('active');
-                formTitle.textContent = 'Create Account';
-                formSubtitle.textContent = 'Join our farming community';
-                toggleText.textContent = 'Already have an account? ';
-                toggleBtn.textContent = 'Sign In';
+                formTitle.textContent = 'انشا حساب';
+                formSubtitle.textContent = 'انضم الى مجتمعنا الفلاحي ';
+                toggleText.textContent = 'هل لديك بالفعل حساب؟ ';
+                toggleBtn.textContent = 'تسجيل دخول';
             }
 
             clearMessages();
